<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.aloha.a2a</groupId>
    <artifactId>aloha-java-parent</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <name>Aloha A2A Java - Parent</name>
    <description>Multi-language A2A implementation - Java parent project</description>

    <modules>
        <module>agent</module>
        <module>host</module>
    </modules>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        
        <!-- Quarkus -->
        <quarkus.platform.version>3.15.1</quarkus.platform.version>
        <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
        <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
        
        <!-- A2A SDK -->
        <a2a.sdk.version>0.3.0.Beta2</a2a.sdk.version>
        
        <!-- Langchain4j -->
        <langchain4j.version>0.35.0</langchain4j.version>
        <quarkus.langchain4j.version>0.21.0</quarkus.langchain4j.version>
        
        <!-- Other dependencies -->
        <grpc.version>1.68.1</grpc.version>
        <protobuf.version>4.31.1</protobuf.version>
        <jackson.version>2.18.1</jackson.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Quarkus BOM -->
            <dependency>
                <groupId>${quarkus.platform.group-id}</groupId>
                <artifactId>${quarkus.platform.artifact-id}</artifactId>
                <version>${quarkus.platform.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            
            <!-- A2A SDK -->
            <dependency>
                <groupId>io.github.a2asdk</groupId>
                <artifactId>a2a-java-sdk-reference-grpc</artifactId>
                <version>${a2a.sdk.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.a2asdk</groupId>
                <artifactId>a2a-java-sdk-reference-jsonrpc</artifactId>
                <version>${a2a.sdk.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.a2asdk</groupId>
                <artifactId>a2a-java-sdk-reference-rest</artifactId>
                <version>${a2a.sdk.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.a2asdk</groupId>
                <artifactId>a2a-java-sdk-client</artifactId>
                <version>${a2a.sdk.version}</version>
            </dependency>
            
            <!-- Langchain4j -->
            <dependency>
                <groupId>dev.langchain4j</groupId>
                <artifactId>langchain4j</artifactId>
                <version>${langchain4j.version}</version>
            </dependency>
            <dependency>
                <groupId>dev.langchain4j</groupId>
                <artifactId>langchain4j-ollama</artifactId>
                <version>${langchain4j.version}</version>
            </dependency>
            <dependency>
                <groupId>io.quarkiverse.langchain4j</groupId>
                <artifactId>quarkus-langchain4j-ollama</artifactId>
                <version>${quarkus.langchain4j.version}</version>
            </dependency>
            
            <!-- gRPC -->
            <dependency>
                <groupId>io.grpc</groupId>
                <artifactId>grpc-netty</artifactId>
                <version>${grpc.version}</version>
            </dependency>
            <dependency>
                <groupId>io.grpc</groupId>
                <artifactId>grpc-protobuf</artifactId>
                <version>${grpc.version}</version>
            </dependency>
            <dependency>
                <groupId>io.grpc</groupId>
                <artifactId>grpc-stub</artifactId>
                <version>${grpc.version}</version>
            </dependency>
            
            <!-- Protobuf -->
            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-java</artifactId>
                <version>${protobuf.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <source>21</source>
                        <target>21</target>
                        <parameters>true</parameters>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>com.spotify.fmt</groupId>
                    <artifactId>fmt-maven-plugin</artifactId>
                    <version>2.29</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>format</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>${quarkus.platform.group-id}</groupId>
                    <artifactId>quarkus-maven-plugin</artifactId>
                    <version>${quarkus.platform.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
